--- a/components/ManageInventory/ManageInventory.module.css
+++ b/components/ManageInventory/ManageInventory.module.css
@@ -1,7 +1,7 @@
 .list {
   padding: 16px;
-
   height: fit-content;
+  height: 100vh;
 }
 
 .tab {
@@ -31,8 +31,8 @@
 }
 
 .rootGroup {
-    flex: auto;
-    width: 200px;
-    justify-content: space-between;
-    align-items: center;
+  flex: auto;
+  width: 200px;
+  justify-content: space-between;
+  align-items: center;
 }
