--- a/components/Login/Login.module.css
+++ b/components/Login/Login.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #f9f9f9;
 }
 
 .loginBox {
@@ -22,7 +22,7 @@
     margin-bottom: 2rem;
 }
 
-.inputGroup {
+.inputs {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -34,13 +34,13 @@
 }
 
 .loginButton {
-    background-color: #1c4966 !important;
+    background-color: #1B4965;
     color: white;
     margin-bottom: 2rem;
 }
 
 .loginButton:hover {
-    background-color: #15374d !important;
+    background-color: #336584;
 }
 
 .footer {
@@ -59,10 +59,14 @@
 }
 
 .contact a {
-    color: #1c4966;
+    color: #1B4965;
     text-decoration: none;
 }
 
 .contact a:hover {
     text-decoration: underline;
+}
+
+.errorTxt {
+    color: red;
 }
