12-01-2024 Update: - Implemented Search Functionality - Updated Number types in UpdateItem to String. Casting to Number/String happens before API call. Solves TextInput unable to clear '0'.

--- a/components/SearchItem/SearchItem.module.css
+++ b/components/SearchItem/SearchItem.module.css
@@ -13,5 +13,18 @@
 }
 
 .selectRoot {
-    width: 500px
+    width: 100%;
 }
+
+.thead {
+    background-color: transparent;
+}
+
+/* .td {
+    overflow-x: scroll;
+    max-width: 20px;
+}
+
+.td::-webkit-scrollbar {
+    display: none;
+} */
