--- a/components/ProfilePage/ProfilePage.module.css
+++ b/components/ProfilePage/ProfilePage.module.css
@@ -2,15 +2,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /*border: 1px solid purple;*/
-    width: 75vw;
-    height: 83vh;
+   /* border: 1px solid purple; */
+    /*width: 75vw;*/
+    /*height: 83vh;*/
+    width: 100%;
+    min-width: 53vw;
+    height: 100vh;
 }
 
 
 .internalLayoutGroup {
     display: flex;
     /*border: 1px solid blue;*/
+    width: 50vw;
+    justify-content: center;
+    border-radius: 2%;
+    /* background-color: #F6F5F5; /* Corrected hex color format */
+   /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Added drop shadow */
+
 }
 
 .rootText {
@@ -18,6 +27,13 @@
     font-weight: bold;
     text-decoration: underline;
     text-underline-offset: 8px;
+    margin: 0; /* Removes any default spacing */
+    padding: 0; /* Ensures no additional padding */
+    
+}
+
+.title {
+    font-weight: bold;
 }
 
 
@@ -25,14 +41,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
     margin-right: 30px;
     /*border: 6px solid red;*/
+    
+}
+
+.photo {
+    border-radius: 50%;
+    width: 200px;
+    height: auto;
+    margin-top: 20px;
 }
 
 
 .simplegrid1 {
     margin-left: 5vh;
     margin-top: 7.5vh;
+    margin-bottom: 7.5vh;
     /*border: 6px solid red;*/
 }
 
@@ -44,6 +70,10 @@
     width: 150px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-right: 2vh;
+    margin-left: none;
 }
 
 .button:hover {
