--- a/components/Odor/odor.module.css
+++ b/components/Odor/odor.module.css
@@ -5,9 +5,13 @@
 
 
 
-
+.odorText {
+    font-size: 36px;
+    font-weight: bold;
+    margin-top: 3vh;
+}
 
 .rootText {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
 }
