--- a/components/Odor/odor.module.css
+++ b/components/Odor/odor.module.css
@@ -15,3 +15,28 @@
     font-size: 30px;
     font-weight: bold;
 }
+
+
+
+
+.buttonAdd {
+    background-color: #228BE6;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 0.5vw;
+}
+
+.buttonSub {
+    background-color: #228BE6;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-right: 0.5vw;
+}
+
+.button:hover {
+    background-color: #1D7ED6;
+}
