01-18-2025 Update: - Updated CreateRorTemplate tsx and css files - Edited EmployeeToEdit schema to include isActive default value - Edited CustomNotification css to absolute positioning so as not to interfere with other components - Created TableDeleteBtn component for the table delete button

--- a/components/CreateRorTemplate/CreateRorTemplate.module.css
+++ b/components/CreateRorTemplate/CreateRorTemplate.module.css
@@ -1,4 +1,17 @@
+.rootMain {
+  flex: 1;
+}
+
+.rootOuterGroup {
+  height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
 .rootGroup {
+  width: 100%;
   align-items: baseline;
   flex-direction: column;
 }
@@ -16,6 +29,11 @@
   text-underline-offset: 8px;
 }
 
-.button {
-  background-color: #1b4965;
+.rootTable {
+  width: 100%;
+  table-layout: auto;
+}
+
+.submitButton {
+  align-self: self-end;
 }
