added Page navigation and moved itemOrders array STATE to parent componenet to persist data betweeen pages

--- a/app/odor/odorpage.module.css
+++ b/app/odor/odorpage.module.css
@@ -3,3 +3,21 @@
     font-weight: bold;
     margin-top: 5vh;
 }
+
+
+.navButtonsDiv {
+    display: flex;
+    justify-content: space-evenly;
+    width: 30vw;
+    padding-bottom: 1vh;
+}
+
+.spacerDiv {
+    flex-grow: 1;
+}
+
+
+.outerSpacerDiv {
+    display: flex;
+    width: 100%;
+}
