--- a/components/CreateRorTemplate/CreateRorTemplate.module.css
+++ b/components/CreateRorTemplate/CreateRorTemplate.module.css
@@ -19,7 +19,8 @@
 .searchGroup {
   display: flex;
   align-items: end;
-  justify-content: center;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .rootText {
@@ -32,6 +33,10 @@
 .rootTable {
   width: 100%;
   table-layout: auto;
+}
+
+.selectRoot {
+  width:50%;
 }
 
 .submitButton {
