--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -38,10 +38,7 @@
 }
 
 .exteriorDiv {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 83vw;
+    width: 80vw;
     height: 80vh;
     min-width: 50vh;
     border: 1px solid blue;
@@ -61,4 +58,45 @@
     border: 1px solid red;
     width: 50vw;
     margin-bottom: 10px;
+}
+
+
+.templateTitle {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.addButton {
+    margin: none;
+}
+
+.buttonDiv {
+    border: 1px solid red;
+    display: flex;
+    align-items:flex-end;
+}
+
+
+.button {
+    background-color: #228BE6;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #1D7ED6;
+}
+
+.buttonIncrement {
+    margin-left: 0.5vw;
+}
+
+.buttonDecrement {
+    margin-right: 0.5vw;
+}
+
+.buttonRemove:hover {
+    background-color: red;
 }
