01-23-2025 Fix: - Modified ROR approvers to just P1

--- a/components/RorModal/RorModal.module.css
+++ b/components/RorModal/RorModal.module.css
@@ -10,6 +10,12 @@
   margin-bottom: 36px;
 }
 
+.rootApprovalTable {
+  width: 25%;
+  table-layout: auto;
+  margin-bottom: 36px;
+}
+
 .rootSection {
   margin-bottom: 36px;
 }
