Added Recipient name/location and remarks

--- a/components/Odor3/odor3.module.css
+++ b/components/Odor3/odor3.module.css
@@ -21,4 +21,15 @@
 .templateTitle {
     font-size: 32px;
     font-weight: bold;
+    text-align: center;
+}
+
+.templateHeading {
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: 3vh;
+}
+
+.TextAreaStyle {
+    width: 40%;
 }
