--- a/components/Odor1/odor1.module.css
+++ b/components/Odor1/odor1.module.css
@@ -9,6 +9,11 @@
     text-underline-offset: 8px;
 }
 
+.templateTitle {
+    font-size: 32px;
+    font-weight: bold;
+}
+
 .rootText {
     font-size: 30px;
     font-weight: bold;
