--- a/components/RorModal/RorModal.module.css
+++ b/components/RorModal/RorModal.module.css
@@ -1,7 +1,7 @@
 .rootText {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 24px;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 24px;
 }
 
 .rootTable {
@@ -18,4 +18,23 @@
 
 .rootSection {
   margin-bottom: 36px;
+}
+
+.rootBtnArea {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+}
+
+.rootBtn {
+  height: 48px;
+  width: 128px;
+}
+
+.tableTd {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
