01-25-2025 Update: - Implemented nested modal in RorModal.tsx for confirmation before database persistence

--- a/components/RorModal/RorModal.module.css
+++ b/components/RorModal/RorModal.module.css
@@ -4,6 +4,12 @@
   margin-bottom: 24px;
 }
 
+.rootConfirmationText {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 36px;
+}
+
 .rootTable {
   width: 100%;
   table-layout: auto;
@@ -31,11 +37,16 @@
   justify-content: center;
   align-items: center;
   gap: 48px;
+  margin-top: 36px;
 }
 
 .rootBtn {
   height: 48px;
   width: 128px;
+}
+
+.rootConfirmationBtn {
+
 }
 
 .tableTd {
