--- a/components/InventoryOverview/InventoryOverview.module.css
+++ b/components/InventoryOverview/InventoryOverview.module.css
@@ -16,6 +16,12 @@
   font-weight: 600;
 }
 
+.cardText:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+
 .cardNumber{
   text-align: center;
   font-weight: 900;
