--- a/app/odor/odorpage.module.css
+++ b/app/odor/odorpage.module.css
@@ -1,3 +1,10 @@
 .navbutton {
     width: 120px;
 }
+
+.odorText {
+    font-size: 48px;
+    font-weight: bold;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+}
