Fix word wrap in step name

--- a/components/WizardProgress/WizardProgress.module.css
+++ b/components/WizardProgress/WizardProgress.module.css
@@ -6,6 +6,7 @@
 .stepContainer {
     width: 60px;
     overflow: visible;
+    white-space: pre;
     display: flex;
     flex-direction: column;
     align-items: center;
