--- a/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
+++ b/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
@@ -13,3 +13,12 @@
     text-decoration: underline;
     cursor:pointer;
 }
+
+.table {
+    width: 100%;
+}
+
+.table th, .table td {
+    width: 29%;
+    text-align: left;
+}
