--- a/components/Odor1/odor1.module.css
+++ b/components/Odor1/odor1.module.css
@@ -53,3 +53,30 @@
     width: 100%;
   }
 
+  .outerScrollingBox {
+    border: 2px solid rgb(237, 237, 232);
+    padding: 8px;
+    border-radius: 20px;
+}
+
+/* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
+/* the custom CSS  */
+.scrollableContainer { 
+    overflow-y: scroll;
+    height: 58vh;
+}
+
+.scrollableContainer::-webkit-scrollbar {
+    width: 1rem;
+    /*height: 1rem;*/
+  }
+
+  .scrollableContainer::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  .scrollableContainer::-webkit-scrollbar-thumb {
+    background: #9da9b0;
+    border-radius: 100vw;
+    border: 0.20rem solid #ffffff;
+  }
