--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -61,6 +61,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
 }
 
 .rootText {
@@ -68,5 +69,32 @@
     font-weight: bold;
 }
 
+.outerScrollingBox {
+    border: 2px solid rgb(237, 237, 232);
+    padding: 8px;
+    border-radius: 20px;
+}
+
+/* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
+/* the custom CSS  */
+.scrollableContainer { 
+    overflow-y: scroll;
+    height: 58vh;
+}
+
+.scrollableContainer::-webkit-scrollbar {
+    width: 1rem;
+    /*height: 1rem;*/
+  }
+
+  .scrollableContainer::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  .scrollableContainer::-webkit-scrollbar-thumb {
+    background: #9da9b0;
+    border-radius: 100vw;
+    border: 0.20rem solid #ffffff;
+  }
 
 
