--- a/components/Odor3/odor3.module.css
+++ b/components/Odor3/odor3.module.css
@@ -27,9 +27,37 @@
 .templateHeading {
     font-size: 28px;
     font-weight: bold;
-    margin-top: 3vh;
 }
 
-.TextAreaStyle {
+.remarksStyle {
     width: 28.5%;
 }
+
+.outerScrollingBox {
+    border: 2px solid rgb(237, 237, 232);
+    padding: 8px;
+    border-radius: 20px;
+}
+
+/* Kyles Reference for :https://dev.to/sagnik77/custom-scrollbars-with-css-the-easy-way-3ano  */
+/* the custom CSS  */
+.scrollableContainer { 
+    overflow-y: scroll;
+    height: 58vh;
+}
+
+.scrollableContainer::-webkit-scrollbar {
+    width: 1rem;
+    /*height: 1rem;*/
+  }
+
+  .scrollableContainer::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  .scrollableContainer::-webkit-scrollbar-thumb {
+    background: #9da9b0;
+    border-radius: 100vw;
+    border: 0.20rem solid #ffffff;
+  }
+
