--- a/components/InventoryOverview/InventoryOverview.module.css
+++ b/components/InventoryOverview/InventoryOverview.module.css
@@ -1,28 +1,107 @@
+.container {
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column; 
+  width:30%;
+  border:1px solid #e1e1e1;
+  border-radius: 8px;
+}
 
 
-.heading{
+.heading {
   font-weight: 700;
   margin: 20px;
   text-align: center;
 }
 
-.cardContainer{
+.cardContainer {
   justify-content: center;
   align-content: center;
+  margin:10px auto;
+  margin-bottom: 50px;
 }
 
-.cardText{
+
+.cardText {
   text-align: center;
   font-weight: 600;
+  margin-bottom: 20px;
+  padding-top:15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.cardText:hover{
+.cardText:hover {
   cursor: pointer;
   text-decoration: underline;
 }
 
 
-.cardNumber{
+.cardNumber {
   text-align: center;
   font-weight: 900;
+  padding-bottom:15px;
+}
+
+@media(max-width:1463px){
+  .container {
+    align-items: center; 
+    text-align: center;
+    flex-direction: column;  
+    align-items: center;
+    gap:20px;
+    width:100%;
+  }
+
+  .cardContainer {
+    width:100%;
+  }
+}
+
+
+@media (max-width: 1338px) {
+  .grid {
+    width: 100%; 
+  }
+
+  .container {
+    align-items: center; 
+    text-align: center;
+    flex-direction: column;  
+    align-items: center;
+    gap:20px;
+    width:100%;
+  }
+
+  .heading {
+    text-align: center; 
+    margin-bottom: 20px;
+  }
+
+  .cardContainer {
+    max-width: 300px;
+    margin-bottom: 10px; 
+  }
+
+  .cardText {
+    text-align: center;
+    font-weight: 600;
+    margin: 20px;
+  }
+}
+
+@media (max-width: 786px) {
+  .container {
+    gap: 15px; 
+    padding: 10px;
+  }
+
+  .cardContainer {
+    margin-bottom: 15px;
+  }
+
+  .cardText {
+    margin-bottom: 15px; 
+  }
 }
