--- a/components/DashboardTitle/DashboardTitle.module.css
+++ b/components/DashboardTitle/DashboardTitle.module.css
@@ -1,12 +1,41 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    gap:10px;
+    margin-top:40px;
+    margin-left:40px;
+}
+
+
 .heading{
-    font-weight: 400;
-    text-align: center;
-    margin: "0 0 10px 0";
+    font-weight: bold;
+    font-size:2rem;
+    color: #2c3e50;
+    margin-bottom:5px;
   }
+  
 
 .date{
     font-weight: 400;
     margin-top: 10px;
-    text-align: center;
     font-style: italic;
+    font-size: 1.2rem;
+    color: #7f8c8d;
+}
+
+@media(max-width:768px){
+  .container {
+    align-items: flex-start; 
+    text-align: left;
+    padding: 20px;
+}
+  .heading{
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  .date{
+    font-size: 1rem;
+    color: #95a5a6;
+  }
 }
