02-05-2025 Update: - Ror Modal Update to await currentOr before serving contents - Update Search item and employee css

--- a/components/SearchEmployee/SearchEmployee.module.css
+++ b/components/SearchEmployee/SearchEmployee.module.css
@@ -18,3 +18,13 @@
 .thead {
     background-color: transparent;
 }
+
+.rootTable {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    max-height: 80vh;
+  }
+  
+  .thead {
+    background-color: white;
+  }
