--- a/components/P1Access/P1Access.module.css
+++ b/components/P1Access/P1Access.module.css
@@ -73,6 +73,14 @@
   color: #3c96aa;
 }
 
+.rootPoId {
+  cursor: pointer;
+}
+
+.rootPoId:hover {
+  color: #3c96aa;
+}
+
 .rootPoTable {
   height: 30vh;
   width: 100%;
@@ -88,4 +96,52 @@
     align-items: center;
     height: 80vh;
     width: 80vw;
+}
+
+.generatePoButton {
+  background-color: #54D0ED;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.generatePoButton:hover {
+  background-color: #3c96aa;
+}
+
+.generateSoButton {
+  background-color: #6D6875;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.generateSoButton:hover {
+  background-color: #5e5a65;
+}
+
+.closeTicketButton {
+  background-color: #FFA62B;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.closeTicketButton:hover {
+  background-color: #e89726;
 }
