--- a/components/StockOutModal/StockOutModal.module.css
+++ b/components/StockOutModal/StockOutModal.module.css
@@ -7,7 +7,8 @@
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 24px;
-    
+    margin-top:15px;
+    text-align: center;
   }
   
 
