Added Imgmodal to ODOR and ROR modal

--- a/components/Odor1/odor1.module.css
+++ b/components/Odor1/odor1.module.css
@@ -80,3 +80,9 @@
     border-radius: 100vw;
     border: 0.20rem solid #ffffff;
   }
+
+
+  .imgModalID:hover{
+    text-decoration: underline;
+    cursor:pointer;
+  }
