--- a/components/CreateRor/CreateRor.module.css
+++ b/components/CreateRor/CreateRor.module.css
@@ -36,3 +36,11 @@
     margin-left: 120px;
     margin-top: 30px;
 }
+
+.modalTitle {
+    font-size: x-large;
+    font-weight: 700;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+    color: #1B4965;
+}
