--- a/components/PoModal/PoModal.module.css
+++ b/components/PoModal/PoModal.module.css
@@ -29,3 +29,18 @@
   background-color: #f1f3f5;
   font-weight: bold;
 }
+
+.rootBtnArea {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+  margin-top: 36px;
+}
+
+.rootBtn {
+  height: 48px;
+  width: 128px;
+  background-color: #1B4965;
+}
