--- a/components/P1Access/P1Access.module.css
+++ b/components/P1Access/P1Access.module.css
@@ -15,8 +15,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 80vh;
   width: 80vw;
+  gap: 20px;
 }
 
 .rootSectionGroup {
