--- a/components/P2Access/P2Access.module.css
+++ b/components/P2Access/P2Access.module.css
@@ -9,26 +9,25 @@
 .rootSectionText {
   font-size: 24px;
   font-weight: bold;
+  margin-bottom: 16px;
+  display: block;
 }
 
 .rootMainGroup {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  height: 65vh;
   width: 80vw;
 }
 
 .rootSectionGroup {
   display: flex;
-  flex: 2;
   flex-direction: column;
-  align-items: flex-start;
   width: 100%;
   background-color: #f1f3f5;
   padding: 16px;
   border-radius: 20px;
   max-height: 55vh;
+  overflow-y: auto;
 }
 
 .rootTableGroup {
@@ -150,4 +149,4 @@
 
 .closeTicketButton:hover {
   background-color: #e89726;
-} 
+}
