--- a/components/ChatAssistant/ChatAssistant.module.css
+++ b/components/ChatAssistant/ChatAssistant.module.css
@@ -1,6 +1,6 @@
 .duckSection {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 50px;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  height: 50px;
 }
