--- a/components/P1Access/P1Access.module.css
+++ b/components/P1Access/P1Access.module.css
@@ -130,6 +130,45 @@
   background-color: #5e5a65;
 }
 
+.disabledButton {
+  opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.disabledButton:hover {
+  background-color: #6D6875;
+}
+
+.notificationWrapper {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  width: auto;
+}
+
+.rootConfirmationText {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 36px;
+}
+
+.rootBtnArea {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+  margin-top: 36px;
+}
+
+.rootBtn {
+  height: 48px;
+  width: 128px;
+}
+
 .closeTicketButton {
   background-color: #FFA62B;
   color: white;
