--- a/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
+++ b/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
@@ -39,6 +39,13 @@
   align-items: center;
 }
 
+.paginationContainer {
+  display: flex;
+  justify-content: center;  
+  width: 100%;             
+  margin-top: 10px;       
+}
+
 
 @media (max-width: 768px) {
     .heading {
