--- a/components/InventoryOverview/InventoryOverview.module.css
+++ b/components/InventoryOverview/InventoryOverview.module.css
@@ -20,6 +20,18 @@
   align-content: center;
   margin:10px auto;
   margin-bottom: 50px;
+  transition: all 0.3s ease-in-out;
+  border-radius: 12px;
+  background: white;
+  border: 1px solid #e1e1e1;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+}
+
+
+.cardContainer:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.12);
+  
 }
 
 
@@ -35,8 +47,8 @@
 .cardText:hover {
   cursor: pointer;
   text-decoration: underline;
+  color: #007bff;
 }
-
 
 .cardNumber {
   text-align: center;
