--- a/components/ProfilePage/ProfilePage.module.css
+++ b/components/ProfilePage/ProfilePage.module.css
@@ -79,3 +79,23 @@
 .button:hover {
     background-color: #1D7ED6;
 }
+
+.rootConfirmationText {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 36px;
+  }
+
+  .rootBtnArea {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+    margin-top: 36px;
+  }
+
+  .rootBtn {
+    height: 48px;
+    width: 128px;
+  }
