ror template modal

--- a/components/E2Access/E2Access.module.css
+++ b/components/E2Access/E2Access.module.css
@@ -40,6 +40,11 @@
     overflow-y: scroll;
     scrollbar-width: none;
   }
+
+  .templateTextId:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
   
   @media (max-width: 1024px) {
     .rootTableGroup {
