--- a/components/E3Access/E3Access.module.css
+++ b/components/E3Access/E3Access.module.css
@@ -162,4 +162,9 @@
     border-radius: 8px;
     background-color: #f9f9f9;
   }
+
+  .templateTextId:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
   
