--- a/components/InventoryOverview/InventoryOverview.module.css
+++ b/components/InventoryOverview/InventoryOverview.module.css
@@ -1,13 +1,34 @@
 .container {
-  margin: 20px;
-  padding: 20px;
   display: flex;
-  flex-direction: column; 
-  width:30%;
-  border:1px solid #e1e1e1;
-  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 20vh;
+  min-width: 400px;
+  background-color: #ffffff;
+  padding: 1rem;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s ease;
+  transform: translateY(20px);
+  opacity: 0;
+  animation: fadeInUp 0.5s ease-out forwards;
 }
 
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.container :hover {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
 
 .heading {
   font-weight: 700;
@@ -18,7 +39,7 @@
 .cardContainer {
   justify-content: center;
   align-content: center;
-  margin:10px auto;
+  margin: 10px auto;
   margin-bottom: 50px;
   transition: all 0.3s ease-in-out;
   border-radius: 12px;
@@ -27,19 +48,16 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
 }
 
-
 .cardContainer:hover {
   transform: translateY(-5px);
   box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.12);
-  
 }
-
 
 .cardText {
   text-align: center;
   font-weight: 600;
   margin-bottom: 20px;
-  padding-top:15px;
+  padding-top: 15px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -53,47 +71,46 @@
 .cardNumber {
   text-align: center;
   font-weight: 900;
-  padding-bottom:15px;
+  padding-bottom: 15px;
 }
 
-@media(max-width:1463px){
+@media (max-width: 1463px) {
   .container {
-    align-items: center; 
-    text-align: center;
-    flex-direction: column;  
     align-items: center;
-    gap:20px;
-    width:100%;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
   }
 
   .cardContainer {
-    width:100%;
+    width: 100%;
   }
 }
 
-
 @media (max-width: 1338px) {
   .grid {
-    width: 100%; 
+    width: 100%;
   }
 
   .container {
-    align-items: center; 
-    text-align: center;
-    flex-direction: column;  
     align-items: center;
-    gap:20px;
-    width:100%;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
   }
 
   .heading {
-    text-align: center; 
+    text-align: center;
     margin-bottom: 20px;
   }
 
   .cardContainer {
     max-width: 300px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
   .cardText {
@@ -105,7 +122,7 @@
 
 @media (max-width: 786px) {
   .container {
-    gap: 15px; 
+    gap: 15px;
     padding: 10px;
   }
 
@@ -114,6 +131,6 @@
   }
 
   .cardText {
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
   }
 }
