--- a/components/P1Access/P1Access.module.css
+++ b/components/P1Access/P1Access.module.css
@@ -1,3 +1,7 @@
+.main {
+  width: 100%;
+}
+
 .rootText {
   font-size: 2.5rem;
   font-weight: 700;
@@ -66,6 +70,7 @@
 .rootTableGroup {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex: 2;
   height: 30vh;
   width: 100%;
@@ -122,18 +127,22 @@
   text-overflow: ellipsis;
 }
 
-.rootTextId, .rootPoId {
+.rootTextId,
+.rootPoId {
   cursor: pointer;
   color: #3c96aa;
   font-weight: 500;
-  transition: color 0.2s ease, transform 0.2s ease;
+  transition:
+    color 0.2s ease,
+    transform 0.2s ease;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   max-width: 100%;
 }
 
-.rootTextId:hover, .rootPoId:hover {
+.rootTextId:hover,
+.rootPoId:hover {
   color: #54d0ed;
   transform: translateY(-1px);
 }
@@ -155,7 +164,9 @@
   width: 80vw;
 }
 
-.generatePoButton, .generateSoButton, .closeTicketButton {
+.generatePoButton,
+.generateSoButton,
+.closeTicketButton {
   border: none;
   height: 25px;
   text-align: center;
