--- a/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
+++ b/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
@@ -1,14 +1,17 @@
 .rootMain {
   display: flex;
-  height: 45vh;
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
+  gap: 1rem;
+  background-color: #ffffff;
+  height: 42vh;
 }
 
 .rootTableGroup {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex: 2;
   width: 100%;
   overflow-y: scroll;
@@ -16,16 +19,17 @@
 }
 
 .heading {
+  font-size: 1.25rem;
   font-weight: 700;
-  margin: 20px;
-  text-align: center;
-  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 0.75rem;
 }
 
-.group {
-  width: 100%;
-  height: 100%;
-  justify-content: center;
+.rootPaginationGroupRequisition {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 310px;
   animation: fadeInUp 0.5s ease-out forwards;
   opacity: 0;
 }
@@ -107,14 +111,6 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-}
-
-.paginationContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin-top: 10px;
 }
 
 @media (max-width: 768px) {
