--- a/components/RecentStockInOutTable/RecentStockInOutTable.module.css
+++ b/components/RecentStockInOutTable/RecentStockInOutTable.module.css
@@ -64,7 +64,28 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 310px;
+  animation: fadeInUp 0.5s ease-out forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.rootPaginationGroupRequisition:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.rootPaginationGroupRequisition:nth-child(2) {
+  animation-delay: 0.5s;
 }
 
 .rootTextId {
