03-14-2025 Update: - Navbar UI Update

--- a/components/NavbarLinksGroup/NavbarLinksGroup.module.css
+++ b/components/NavbarLinksGroup/NavbarLinksGroup.module.css
@@ -3,7 +3,7 @@
   display: block;
   width: 100%;
   padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
-  color: var(--mantine-color-text);
+  color: #fafbfd;
   font-size: var(--mantine-font-size-sm);
 
   @mixin hover {
@@ -20,7 +20,7 @@
   padding-left: var(--mantine-spacing-md);
   margin-left: var(--mantine-spacing-xl);
   font-size: var(--mantine-font-size-sm);
-  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
+  color: #fafbfd;
   border-left: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 
   @mixin hover {
