--- a/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
+++ b/components/RequisitionProcessTableE1/RequisitionProcessTable.module.css
@@ -45,6 +45,14 @@
   }
 }
 
+.noData {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  color: #999;
+  padding: 20px;
+}
+
 .rootPaginationGroupRequisition:nth-child(1) {
   animation-delay: 0.2s;
 }
