E2 ODOR table skeleton

--- a/components/E2Access/E2Access.module.css
+++ b/components/E2Access/E2Access.module.css
@@ -46,6 +46,11 @@
     cursor: pointer;
   }
   
+  .odorTextId:hover {
+    color: #3c96aa;
+    cursor: pointer;
+  }
+  
   @media (max-width: 1024px) {
     .rootTableGroup {
       flex-direction: column;
