--- a/components/AddItem/AddItem.module.css
+++ b/components/AddItem/AddItem.module.css
@@ -4,11 +4,15 @@
 }
 
 .rootText {
-    font-size: 48px;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 8px;
-}
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-decoration: none;
+    border-bottom: 3px solid #3c96aa;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+  
 .button {
     background-color: #1B4965;
 }
