This branch is now for the bell notifications only

--- a/components/DashboardTitle/DashboardTitle.module.css
+++ b/components/DashboardTitle/DashboardTitle.module.css
@@ -67,3 +67,14 @@
     color: #95a5a6;
   }
 }
+
+.endbar{
+  display: flex;
+  align-items:center
+}
+
+
+.Notifications {
+  margin-left: 10px;
+  cursor: pointer;
+}
