--- a/components/GenerateReport/GenerateReport.module.css
+++ b/components/GenerateReport/GenerateReport.module.css
@@ -7,11 +7,13 @@
   
   /* Title styling */
   .title {
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #1b4965;
-    margin-bottom: 20px;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-decoration: none;
+    border-bottom: 3px solid #3c96aa;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
   }
   
   /* Paper (Card) styling */
