--- a/components/RorModal/RorModal.module.css
+++ b/components/RorModal/RorModal.module.css
@@ -55,3 +55,10 @@
   text-decoration: underline;
   cursor:pointer;
 }
+
+.loadingContainer {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
