--- a/components/RecentStockInOutTable/RecentStockInOutTable.module.css
+++ b/components/RecentStockInOutTable/RecentStockInOutTable.module.css
@@ -1,4 +1,3 @@
-
 .main {
   display: flex;
   flex-direction: column;
@@ -27,8 +26,11 @@
 }
 
 .rootRequisitionTable {
+  width: 35vw;
   overflow-y: scroll;
+  min-width: 600px;
   margin-bottom: 20px;
+  border-bottom: 1px solid #e9ecef;
 }
 
 .rootRequisitionThead {
@@ -51,7 +53,6 @@
 }
 
 .rootRequisitionTd {
-  border-bottom: 1px solid #e9ecef;
   transition: background-color 0.2s ease;
   white-space: nowrap;
   overflow: hidden;
@@ -87,6 +88,7 @@
 }
 
 .rootTextId {
+  cursor: pointer;
   color: #3c96aa;
   font-weight: 500;
   transition:
@@ -94,7 +96,13 @@
     transform 0.2s ease;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: block;
   max-width: 100%;
+}
+
+.rootTextId:hover {
+  color: #54d0ed;
+  transform: translateY(-1px);
 }
 
 .noData {
@@ -119,19 +127,16 @@
 @media (max-width: 768px) {
   .heading {
     font-size: 1.2rem;
-    text-align: left; 
+    text-align: left;
     margin: 10px 0;
   }
 
-  
   .td {
-    font-size: 0.9rem; 
+    font-size: 0.9rem;
   }
 }
 
-.imgModalID:hover{
+.imgModalID:hover {
   text-decoration: underline;
-  cursor:pointer;
+  cursor: pointer;
 }
-
-
