--- a/app/dashboard/page.module.css
+++ b/app/dashboard/page.module.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   width: 100%;
   max-width: 1500px;
-  padding: 1rem 0rem 1rem 0rem;
+  padding: 1rem 0rem;
   gap: 1rem;
   margin: auto;
 }
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 1.5rem;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -29,6 +29,7 @@
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
