--- a/components/AddEmployee/AddEmployee.module.css
+++ b/components/AddEmployee/AddEmployee.module.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 1.5rem;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -32,6 +32,7 @@
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -79,7 +80,7 @@
 }
 
 .checkboxLabel {
-  color: #000000;
+  color: #000;
 }
 
 .loadingContainer {
