--- a/components/AddItem/AddItem.module.css
+++ b/components/AddItem/AddItem.module.css
@@ -18,7 +18,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 1.5rem;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -33,6 +33,7 @@
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
