--- a/components/CreateRor/CreateRor.module.css
+++ b/components/CreateRor/CreateRor.module.css
@@ -59,13 +59,13 @@
 }
 
 .scrollableContainer::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: #fff;
 }
 
 .scrollableContainer::-webkit-scrollbar-thumb {
     background: #9da9b0;
     border-radius: 100vw;
-    border: 0.20rem solid #ffffff;
+    border: 0.20rem solid #fff;
 }
 
 .navButton {
