--- a/components/InventoryOverview/InventoryOverview.module.css
+++ b/components/InventoryOverview/InventoryOverview.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   width: 100%;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #fff;
   margin:auto;
 }
 
