--- a/components/Odor2/odor2.module.css
+++ b/components/Odor2/odor2.module.css
@@ -34,6 +34,7 @@
     font-weight:700;
     margin-top: .8vh;
 }
+
 .cancel {
     margin-left: 1vw;
 }
@@ -84,15 +85,15 @@
 
 .scrollableContainer::-webkit-scrollbar {
     width: 1rem;
-    /*height: 1rem;*/
+    /* height: 1rem; */
   }
 
   .scrollableContainer::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: #fff;
   }
 
   .scrollableContainer::-webkit-scrollbar-thumb {
     background: #9da9b0;
     border-radius: 100vw;
-    border: 0.20rem solid #ffffff;
+    border: 0.20rem solid #fff;
   }
