--- a/components/RorTemplateModal/RorTemplateModal.module.css
+++ b/components/RorTemplateModal/RorTemplateModal.module.css
@@ -68,12 +68,12 @@
   padding: 16px;
   border: 1px solid #dcdcdc;
   border-radius: 8px;
-  background-color: #ffffff;
+  background-color: #fff;
   text-align: center;
   font-family: Arial, sans-serif;
   font-size: 16px;
   font-weight: bold;
-  color: #000000;
+  color: #000;
 }
 
 /* Modal Buttons */
